--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.25.0",
+    "classnames": "^2.3.1",
+    "jest": "^27.4.7",
+    "msw": "^0.36.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -20,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "lint": "eslint --color --ignore-path .eslintignore --ext .ts,.tsx .",
+    "format:check": "prettier --ignore-path .gitignore --check \"**/*.+(html|css|sass|scss|js|jsx|ts|tsx|json)\"",
+    "format:fix": "prettier --ignore-path .gitignore --write \"**/*.+(html|css|sass|scss|js|jsx|ts|tsx|json)\""
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +46,21 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "eslint": "^8.7.0",
+    "eslint-plugin-react": "^7.28.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.2",
+    "prettier": "^2.5.1"
+  },
+  "lint-staged": {
+    "src/*.{ts,tsx}": [
+      "npm run format:fix",
+      "npm run lint"
     ]
   }
 }
